--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crazy AI Weather</title>
+    <title>AI Weather Forecast</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Crazy AI Weather Forecast</h1>
+    <h1>AI Weather Forecast</h1>
     <div class="container">
         <input type="text" id="location" placeholder="Enter your location">
         <button onclick="checkWeather()">Check Weather</button>
