--- a/index.html
+++ b/index.html
@@ -3,15 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Weather Forecast</title>
+    <title>AI Weather Prank</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>AI Weather Forecast</h1>
-    <div class="container">
-        <input type="text" id="location" placeholder="Enter your location">
+    <h1>Crazy AI Weather Forecast</h1>
+
+    <div class="window" id="loadingWindow">
+        <div class="title-bar">
+            <span>AI Weather...</span>
+        </div>
+        <p>Gathering last information...</p>
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
+    </div>
+
+    <div class="window" id="weatherWindow">
+        <div class="title-bar">
+            <span>AI Weather...</span>
+        </div>
+        <p>Location:</p>
+        <input type="text" id="location" placeholder="Enter location">
         <button onclick="checkWeather()">Check Weather</button>
-        <p id="result"></p>
+    </div>
+
+    <div class="window" id="alertBox">
+        <div class="title-bar">
+            <span>AI Weather...</span>
+        </div>
+        <p id="alertMessage"></p>
+        <button onclick="closeAlert()">OK</button>
     </div>
 
     <script src="script.js"></script>
